Improved the styling

--- a/ChessPuzzles/app/BoardView.css
+++ b/ChessPuzzles/app/BoardView.css
@@ -1,4 +1,9 @@
 ﻿.cell{
-    display: inline;
-    margin: 20px;
+
+
+    display: inline-block;
+    border: solid;
+    height: 50px;
+    width: 50px;
+    text-align: center;
 }
